--- a/notebooks/pytorch_01.ipynb
+++ b/notebooks/pytorch_01.ipynb
@@ -6,51 +6,217 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Coding\\deep_learning\\learn_dl\\learn_dl_env\\Lib\\site-packages\\torch\\_subclasses\\functional_tensor.py:275: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:81.)\n",
-      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using CPU, no GPU detected.\n"
+      "True\n",
+      "12.1\n",
+      "1\n",
+      "NVIDIA GeForce GTX 1650\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
+    "print(torch.cuda.is_available())  # Should return True\n",
+    "print(torch.version.cuda)  # Should show a CUDA version\n",
+    "print(torch.cuda.device_count())  # Should show the number of GPUs\n",
+    "print(torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"No GPU detected\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Tensors\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    print(f\"GPU is available: {torch.cuda.get_device_name(0)}\")\n",
-    "else:\n",
-    "    print(\"Using CPU, no GPU detected.\")"
+    "Note : Matrix and tensors are written in capitalcase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TENSOR = torch.tensor([[[1, 2, 3],\n",
+    "                        [4, 5, 6],\n",
+    "                        [7, 8, 9]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0][0][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.5714, 0.7485, 0.2213, 0.0659],\n",
+       "         [0.7428, 0.1091, 0.4646, 0.3952],\n",
+       "         [0.9216, 0.8460, 0.9733, 0.9634]],\n",
+       "\n",
+       "        [[0.2336, 0.1411, 0.2225, 0.0082],\n",
+       "         [0.1395, 0.0637, 0.7089, 0.2049],\n",
+       "         [0.8187, 0.8375, 0.3824, 0.4999]]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_tensor = torch.rand(2, 3, 4)\n",
+    "random_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Important Tensors parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3., 6., 9.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensors = torch.tensor([3.0, 6.0, 9.0],\n",
+    "                                dtype=None,\n",
+    "                                device=None,\n",
+    "                                requires_grad=False)\n",
+    "\n",
+    "float_32_tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensors.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float16"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_16_tensors = float_32_tensors.type(torch.float16)\n",
+    "float_16_tensors.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.6.0+cpu\n"
+      "tensor([[0.1830, 0.4980],\n",
+      "        [0.8766, 0.2420],\n",
+      "        [0.4320, 0.1927]])\n",
+      "tensor([[0.8928, 0.3930],\n",
+      "        [0.4104, 0.7980],\n",
+      "        [0.9069, 0.4105]])\n"
      ]
     }
    ],
    "source": [
-    "print(torch.__version__)"
+    "r = torch.rand(3,2)\n",
+    "r2 = torch.rand(3, 2)\n",
+    "print(r)\n",
+    "print(r2)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmatmul(r, r2)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
+     ]
+    }
+   ],
+   "source": [
+    "# will \n",
+    "result = torch.matmul(r, r2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -76,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
