--- a/notebooks/pytorch_01.ipynb
+++ b/notebooks/pytorch_01.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "12.1\n",
-      "1\n",
-      "NVIDIA GeForce GTX 1650\n"
+      "False\n",
+      "None\n",
+      "0\n",
+      "No GPU detected\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "tensor(2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,22 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.5714, 0.7485, 0.2213, 0.0659],\n",
-       "         [0.7428, 0.1091, 0.4646, 0.3952],\n",
-       "         [0.9216, 0.8460, 0.9733, 0.9634]],\n",
+       "tensor([[[0.0616, 0.0114, 0.7935, 0.3169],\n",
+       "         [0.9775, 0.8811, 0.3615, 0.6008],\n",
+       "         [0.4721, 0.5657, 0.9938, 0.7326]],\n",
        "\n",
-       "        [[0.2336, 0.1411, 0.2225, 0.0082],\n",
-       "         [0.1395, 0.0637, 0.7089, 0.2049],\n",
-       "         [0.8187, 0.8375, 0.3824, 0.4999]]])"
+       "        [[0.1928, 0.9234, 0.7103, 0.0447],\n",
+       "         [0.7550, 0.4548, 0.2493, 0.3568],\n",
+       "         [0.1720, 0.9087, 0.3916, 0.3744]]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "tensor([3., 6., 9.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "torch.float16"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,19 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1830, 0.4980],\n",
-      "        [0.8766, 0.2420],\n",
-      "        [0.4320, 0.1927]])\n",
-      "tensor([[0.8928, 0.3930],\n",
-      "        [0.4104, 0.7980],\n",
-      "        [0.9069, 0.4105]])\n"
+      "tensor([[0.6818, 0.7306],\n",
+      "        [0.3828, 0.7735],\n",
+      "        [0.2165, 0.8710]])\n",
+      "tensor([[0.8880, 0.5086],\n",
+      "        [0.9556, 0.5441],\n",
+      "        [0.1387, 0.3335]])\n"
      ]
     }
    ],
@@ -206,16 +206,177 @@
      "evalue": "mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmatmul(r, r2)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# will \u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m result = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mRuntimeError\u001b[39m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
      ]
     }
    ],
    "source": [
-    "# will \n",
+    "# will return an error  because of inner dimension matrix multiplication mismatch!\n",
     "result = torch.matmul(r, r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 2., 3., 4., 5., 6., 7., 8., 9.]), torch.Size([9]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.arange(1., 10.)\n",
+    "x, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 2., 3.],\n",
+       "        [4., 5., 6.],\n",
+       "        [7., 8., 9.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_reshaped = x.reshape(3, 3)\n",
+    "x_reshaped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [2., 2., 2., 2.],\n",
+       "        [3., 3., 3., 3.],\n",
+       "        [4., 4., 4., 4.],\n",
+       "        [5., 5., 5., 5.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [7., 7., 7., 7.],\n",
+       "        [8., 8., 8., 8.],\n",
+       "        [9., 9., 9., 9.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_stacked = torch.stack([x, x, x, x], dim=1)\n",
+    "x_stacked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0., 0.]]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.zeros(1, 1, 2)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0.])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# squeeze method\n",
+    "y = torch.squeeze(x)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0.]]))"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = torch.zeros(9)\n",
+    "z_unsqueezed = z.unsqueeze(dim=0)\n",
+    "z, z_unsqueezed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 9])\n",
+      "torch.Size([9, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch permute methods\n",
+    "x = torch.randn(1, 9)\n",
+    "x_permuted = torch.permute(x, (1, 0))\n",
+    "print(x.size())\n",
+    "print(x_permuted.size())"
    ]
   },
   {
@@ -242,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
