training a multiclass classification ann model

--- a/notebooks/pytorch_classification.ipynb
+++ b/notebooks/pytorch_classification.ipynb
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,18 +1597,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert numpy into torch tensor\n",
     "X_blob = torch.from_numpy(X_blob).type(torch.float)\n",
-    "y_blob = torch.from_numpy(y_blob).type(torch.float)"
+    "y_blob = torch.from_numpy(y_blob).type(torch.LongTensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,16 +1621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2760bfbfc90>"
+       "<matplotlib.collections.PathCollection at 0x276112838d0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1652,20 +1652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cuda'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create device agnostic code\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n"
@@ -1673,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1677,7 @@
        ")"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,23 +1732,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.4655, -0.3306, -0.3301,  1.3530],\n",
-      "        [ 1.0015,  1.7699, -2.4461,  2.2888],\n",
-      "        [ 0.9718, -0.5101,  1.0171, -2.9804],\n",
-      "        [-0.3104, -0.6515,  0.2762,  0.1780],\n",
-      "        [ 0.0355,  1.1270, -2.1845,  3.4099]], device='cuda:0')\n",
-      "tensor([[0.1058, 0.1211, 0.1211, 0.6520],\n",
-      "        [0.1468, 0.3166, 0.0047, 0.5319],\n",
-      "        [0.4362, 0.0991, 0.4564, 0.0084],\n",
-      "        [0.1946, 0.1384, 0.3499, 0.3172],\n",
-      "        [0.0300, 0.0895, 0.0033, 0.8772]], device='cuda:0')\n"
+      "tensor([[-1.2549, -0.8112, -1.4795, -0.5696],\n",
+      "        [ 1.7168, -1.2270,  1.7367,  2.1010],\n",
+      "        [ 2.2400,  0.7714,  2.6020,  1.0107],\n",
+      "        [-0.7993, -0.3723, -0.9138, -0.5388],\n",
+      "        [-0.4332, -1.6117, -0.6891,  0.6852]], device='cuda:0')\n",
+      "tensor([[0.1872, 0.2918, 0.1495, 0.3715],\n",
+      "        [0.2824, 0.0149, 0.2881, 0.4147],\n",
+      "        [0.3380, 0.0778, 0.4854, 0.0989],\n",
+      "        [0.2118, 0.3246, 0.1889, 0.2748],\n",
+      "        [0.1945, 0.0598, 0.1506, 0.5951]], device='cuda:0')\n"
      ]
     }
    ],
@@ -1775,24 +1764,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([3, 3, 2, 2, 3, 3, 2, 3, 0, 3, 3, 3, 3, 3, 3, 3, 3, 0, 3, 3, 3, 3, 3, 2,\n",
-       "        0, 0, 3, 3, 3, 3, 3, 3, 3, 1, 3, 0, 2, 3, 3, 2, 3, 1, 3, 0, 3, 3, 3, 3,\n",
-       "        3, 3, 2, 3, 3, 2, 1, 0, 3, 2, 3, 0, 0, 3, 3, 0, 0, 3, 3, 3, 3, 3, 3, 3,\n",
-       "        3, 3, 0, 3, 3, 3, 3, 2, 3, 0, 3, 0, 3, 3, 0, 3, 3, 0, 3, 3, 2, 3, 3, 3,\n",
-       "        2, 3, 3, 0, 3, 3, 3, 3, 0, 3, 2, 3, 3, 0, 2, 2, 3, 2, 0, 3, 3, 3, 2, 0,\n",
-       "        0, 3, 3, 3, 2, 3, 3, 3, 0, 3, 3, 0, 3, 2, 3, 3, 3, 3, 3, 3, 3, 3, 2, 0,\n",
-       "        0, 0, 3, 3, 3, 0, 2, 3, 3, 0, 3, 3, 3, 3, 0, 3, 0, 3, 3, 0, 3, 3, 2, 3,\n",
-       "        2, 2, 0, 3, 3, 3, 3, 3, 2, 2, 3, 3, 3, 2, 2, 3, 2, 0, 3, 3, 2, 0, 3, 3,\n",
-       "        2, 3, 0, 3, 3, 3, 0, 3], device='cuda:0')"
+       "tensor([3, 3, 2, 1, 3, 3, 2, 3, 2, 3, 3, 3, 3, 3, 3, 3, 3, 2, 3, 3, 3, 3, 3, 2,\n",
+       "        2, 2, 3, 3, 3, 3, 3, 1, 1, 2, 1, 2, 1, 3, 3, 2, 3, 3, 3, 2, 3, 3, 3, 3,\n",
+       "        3, 3, 1, 3, 3, 1, 3, 2, 3, 1, 3, 2, 2, 3, 3, 2, 2, 3, 3, 3, 3, 3, 3, 3,\n",
+       "        3, 3, 2, 3, 3, 3, 3, 1, 3, 2, 3, 2, 3, 3, 2, 3, 3, 2, 3, 3, 1, 3, 3, 3,\n",
+       "        1, 3, 3, 2, 3, 3, 3, 3, 2, 3, 1, 3, 3, 2, 1, 1, 3, 2, 2, 3, 3, 3, 1, 2,\n",
+       "        2, 3, 3, 1, 2, 3, 3, 3, 2, 3, 3, 2, 3, 2, 3, 3, 3, 3, 3, 1, 1, 3, 2, 2,\n",
+       "        2, 2, 3, 3, 3, 2, 2, 1, 3, 2, 3, 3, 3, 3, 2, 3, 2, 3, 3, 2, 3, 3, 2, 3,\n",
+       "        2, 2, 2, 3, 3, 1, 1, 1, 1, 1, 3, 1, 3, 2, 2, 3, 2, 2, 3, 3, 2, 2, 3, 3,\n",
+       "        1, 3, 2, 3, 3, 1, 2, 3], device='cuda:0')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,27 +1793,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1., 3., 2., 1., 0., 3., 2., 0., 2., 0., 0., 1., 0., 0., 0., 3., 3., 2.,\n",
-       "        3., 3., 3., 0., 1., 2., 2., 2., 3., 0., 1., 0., 3., 1., 1., 3., 1., 2.,\n",
-       "        1., 3., 0., 2., 0., 3., 3., 2., 0., 3., 1., 1., 0., 3., 1., 0., 1., 1.,\n",
-       "        3., 2., 1., 1., 3., 2., 2., 0., 3., 2., 2., 0., 0., 3., 3., 0., 0., 3.,\n",
-       "        3., 3., 2., 3., 3., 3., 3., 1., 0., 2., 3., 2., 3., 3., 2., 3., 3., 2.,\n",
-       "        3., 3., 1., 3., 3., 3., 1., 0., 3., 2., 0., 0., 3., 0., 2., 3., 1., 0.,\n",
-       "        3., 2., 1., 1., 0., 2., 2., 3., 0., 0., 1., 2., 2., 3., 0., 1., 2., 0.,\n",
-       "        0., 0., 2., 3., 1., 2., 3., 2., 0., 3., 0., 0., 1., 1., 1., 0., 2., 2.,\n",
-       "        2., 2., 0., 3., 3., 2., 2., 1., 3., 2., 0., 0., 3., 3., 2., 1., 2., 0.,\n",
-       "        3., 2., 0., 3., 2., 0., 2., 2., 2., 0., 3., 1., 1., 1., 1., 1., 3., 1.,\n",
-       "        0., 2., 2., 1., 2., 2., 0., 1., 2., 2., 0., 0., 1., 3., 2., 0., 3., 1.,\n",
-       "        2., 1.], device='cuda:0')"
+       "tensor([1, 3, 2, 1, 0, 3, 2, 0, 2, 0, 0, 1, 0, 0, 0, 3, 3, 2, 3, 3, 3, 0, 1, 2,\n",
+       "        2, 2, 3, 0, 1, 0, 3, 1, 1, 3, 1, 2, 1, 3, 0, 2, 0, 3, 3, 2, 0, 3, 1, 1,\n",
+       "        0, 3, 1, 0, 1, 1, 3, 2, 1, 1, 3, 2, 2, 0, 3, 2, 2, 0, 0, 3, 3, 0, 0, 3,\n",
+       "        3, 3, 2, 3, 3, 3, 3, 1, 0, 2, 3, 2, 3, 3, 2, 3, 3, 2, 3, 3, 1, 3, 3, 3,\n",
+       "        1, 0, 3, 2, 0, 0, 3, 0, 2, 3, 1, 0, 3, 2, 1, 1, 0, 2, 2, 3, 0, 0, 1, 2,\n",
+       "        2, 3, 0, 1, 2, 0, 0, 0, 2, 3, 1, 2, 3, 2, 0, 3, 0, 0, 1, 1, 1, 0, 2, 2,\n",
+       "        2, 2, 0, 3, 3, 2, 2, 1, 3, 2, 0, 0, 3, 3, 2, 1, 2, 0, 3, 2, 0, 3, 2, 0,\n",
+       "        2, 2, 2, 0, 3, 1, 1, 1, 1, 1, 3, 1, 0, 2, 2, 1, 2, 2, 0, 1, 2, 2, 0, 0,\n",
+       "        1, 3, 2, 0, 3, 1, 2, 1], device='cuda:0')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,9 +1821,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch : 0 | Loss : 1.04, Acc : 65.50% | Test Loss: 0.58 | Test acc: 95.5\n",
+      "Epoch : 100 | Loss : 0.03, Acc : 99.12% | Test Loss: 0.02 | Test acc: 99.5\n",
+      "Epoch : 200 | Loss : 0.03, Acc : 99.12% | Test Loss: 0.02 | Test acc: 99.5\n",
+      "Epoch : 300 | Loss : 0.03, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 400 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 500 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 600 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 700 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 800 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n",
+      "Epoch : 900 | Loss : 0.02, Acc : 99.25% | Test Loss: 0.01 | Test acc: 99.5\n"
+     ]
+    }
+   ],
    "source": [
     "torch.manual_seed(42)\n",
     "torch.cuda.manual_seed(42)\n",
@@ -1848,7 +1851,7 @@
     "    model_4.train()\n",
     "    # 1. Forward pass\n",
     "    y_logits = model_4(X_blob_train).squeeze()\n",
-    "    y_preds = torch.softmax(y_logits, dim=1)\n",
+    "    y_preds = torch.softmax(y_logits, dim=1).argmax(dim=1) # <-- get and set the highest index probabilities from the softmax by using argmax\n",
     "\n",
     "    # calculate the loss and acc\n",
     "    train_loss = loss_fn(y_logits, y_blob_train)\n",
@@ -1858,7 +1861,7 @@
     "    optimizer.zero_grad()\n",
     "\n",
     "    # backprop\n",
-    "    loss.backward()\n",
+    "    train_loss.backward()\n",
     "\n",
     "    # gradient descent\n",
     "    optimizer.step()\n",
@@ -1867,7 +1870,7 @@
     "    model_4.eval()\n",
     "    with torch.inference_mode(): # <-- turns off gradient tracking\n",
     "        y_test_logits = model_4(X_blob_test).squeeze() # <-- removes all ones in the tensor dimension\n",
-    "        y_pred_test = torch.softmax(y_test_logits, dim=1)\n",
+    "        y_pred_test = torch.softmax(y_test_logits, dim=1).argmax(dim=1)\n",
     "\n",
     "        test_loss = loss_fn(y_test_logits, y_blob_test)\n",
     "        test_acc = accuracy_fn(y_blob_test, y_pred_test)\n",
@@ -1875,6 +1878,13 @@
     "    if epoch % 100 == 0:\n",
     "        print(f\"Epoch : {epoch} | Loss : {train_loss:.2f}, Acc : {acc:.2f}% | Test Loss: {test_loss:.2f} | Test acc: {test_acc}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
