--- a/notebooks/cnn.ipynb
+++ b/notebooks/cnn.ipynb
@@ -1390,6 +1390,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a convulutional neural network\n",
+    "class FashionMNISTModelV2(nn.Module):\n",
+    "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int):\n",
+    "        super().__init__()\n",
+    "        self.conv_block_1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=input_shape,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2)\n",
+    "        )\n",
+    "        self.conv_block_2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2) \n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        return self"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
