--- a/notebooks/cnn.ipynb
+++ b/notebooks/cnn.ipynb
@@ -423,8 +423,8 @@
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x1f0a89e3d90>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x1f0af55e010>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x21a5ed5f910>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x21a5ee09e90>)"
       ]
      },
      "execution_count": 13,
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "torch.Size([1, 10])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "                      -0.2612, -0.2613]))])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -801,15 +801,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "true\n"
      ]
     }
    ],
@@ -832,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -881,13 +880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e04e5569d2d4e45922dff082057d0f3",
+       "model_id": "fd34c87aec144d369e01ccfbd214697f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -929,7 +928,7 @@
       "Looked at 51200/60000 samples\n",
       "\n",
       "Train loss: 0.4550 | Test loss : 0.4766, Test acc: 83.4265\n",
-      "Train time on cpu: 25.094 seconds\n"
+      "Train time on cpu: 24.783 seconds\n"
      ]
     }
    ],
@@ -1011,13 +1010,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a23966d2ef1b48a3a9141415ab5134c3",
+       "model_id": "cf323c28bf4f4e6a8e90f24eea35ef01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1036,7 +1035,7 @@
        " 'model_acc': 83.42651757188499}"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1098,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1143,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,13 +1272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f3759f1f2c4facae3c6edefb88fd44",
+       "model_id": "38e34cf839e04668bae56385347dfbe3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1309,7 +1308,7 @@
       "Train loss : 0.67027 | Train acc : 75.94 \n",
       "Test loss : 0.6850, Test acc: 75.0200\n",
       "\n",
-      "Train time on cuda: 27.697 seconds\n"
+      "Train time on cuda: 30.491 seconds\n"
      ]
     }
    ],
@@ -1350,13 +1349,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efc544bfb7a64796ab0b989ccac16cad",
+       "model_id": "dc18f68d2f8d487e82ef2d25acf93429",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1375,7 +1374,7 @@
        " 'model_acc': 75.01996805111821}"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,9 +1435,161 @@
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2) \n",
     "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=hidden_units * 0,\n",
+    "                      out_features=output_shape)\n",
+    "        )\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        return self"
+    "        x = self.conv_block_1(x)\n",
+    "        print(x.shape)\n",
+    "        x = self.conv_block_2(x)\n",
+    "        print(x)\n",
+    "        x = self.classifier(x)\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\anaconda3\\Lib\\site-packages\\torch\\nn\\init.py:511: UserWarning: Initializing zero-element tensors is a no-op\n",
+      "  warnings.warn(\"Initializing zero-element tensors is a no-op\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "model_2 = FashionMNISTModelV2(\n",
+    "    input_shape= 1,\n",
+    "    hidden_units=10,\n",
+    "    output_shape=len(class_names)\n",
+    ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image batch : torch.Size([32, 3, 64, 64])\n",
+      "Single Image batch : torch.Size([3, 64, 64])\n",
+      "Test image:\n",
+      " tensor([[[0.8823, 0.9150, 0.3829,  ..., 0.1587, 0.6542, 0.3278],\n",
+      "         [0.6532, 0.3958, 0.9147,  ..., 0.2083, 0.3289, 0.1054],\n",
+      "         [0.9192, 0.4008, 0.9302,  ..., 0.5535, 0.4117, 0.3510],\n",
+      "         ...,\n",
+      "         [0.1457, 0.1499, 0.3298,  ..., 0.9624, 0.6400, 0.7409],\n",
+      "         [0.1709, 0.5797, 0.6340,  ..., 0.6885, 0.2405, 0.5956],\n",
+      "         [0.9199, 0.1247, 0.3573,  ..., 0.6752, 0.2058, 0.5027]],\n",
+      "\n",
+      "        [[0.1458, 0.9024, 0.9217,  ..., 0.1868, 0.6352, 0.8431],\n",
+      "         [0.9549, 0.4435, 0.6924,  ..., 0.1168, 0.7160, 0.5462],\n",
+      "         [0.1616, 0.1054, 0.8614,  ..., 0.4531, 0.4736, 0.9448],\n",
+      "         ...,\n",
+      "         [0.4309, 0.3986, 0.1907,  ..., 0.9444, 0.2848, 0.3776],\n",
+      "         [0.7948, 0.6855, 0.1009,  ..., 0.6147, 0.7747, 0.2323],\n",
+      "         [0.5840, 0.9795, 0.3277,  ..., 0.3549, 0.1263, 0.1280]],\n",
+      "\n",
+      "        [[0.5027, 0.4195, 0.8893,  ..., 0.3084, 0.1567, 0.7860],\n",
+      "         [0.7310, 0.9307, 0.2847,  ..., 0.8432, 0.8307, 0.0897],\n",
+      "         [0.7021, 0.5967, 0.7744,  ..., 0.8485, 0.4520, 0.0401],\n",
+      "         ...,\n",
+      "         [0.5440, 0.0679, 0.6577,  ..., 0.9948, 0.2791, 0.4142],\n",
+      "         [0.5095, 0.1246, 0.1726,  ..., 0.0984, 0.3224, 0.3125],\n",
+      "         [0.3612, 0.8706, 0.4751,  ..., 0.5368, 0.2389, 0.2095]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "images = torch.rand(size=(32, 3, 64, 64))\n",
+    "test_image = images[0]\n",
+    "\n",
+    "print(f\"Image batch : {images.shape}\")\n",
+    "print(f\"Single Image batch : {test_image.shape}\")\n",
+    "print(f\"Test image:\\n {test_image}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 62, 62])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "# Create a single conv2d layers\n",
+    "conv_layer = nn.Conv2d(in_channels=3,\n",
+    "                       out_channels=10,\n",
+    "                       kernel_size=3,\n",
+    "                       stride=1,\n",
+    "                       padding=0)\n",
+    "\n",
+    "conv_output = conv_layer(test_image)\n",
+    "conv_output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max pool shape : torch.Size([10, 31, 31])\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_pool_layer = nn.MaxPool2d(kernel_size=2)\n",
+    "\n",
+    "max_pool_test_image = max_pool_layer(conv_output)\n",
+    "print(f\"Max pool shape : {max_pool_test_image.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 28, 28])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_image_tensor = torch.randn(size=(1, 28, 28)).to(device)\n",
+    "rand_image_tensor.shape"
    ]
   },
   {
