--- a/notebooks/customdata_cnn.ipynb
+++ b/notebooks/customdata_cnn.ipynb
@@ -2,15 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.5.1+cu121'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"gpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..\\data\\pizza_steak_sushi does not exist, downloading ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import zipfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data_path = Path(\"../data\")\n",
+    "image_path = data_path / \"pizza_steak_sushi\"\n",
+    "\n",
+    "if image_path.is_dir():\n",
+    "    print(f\"{image_path} directory already exists... skipping download\")\n",
+    "else:\n",
+    "    print(f\"{image_path} does not exist, downloading ...\")\n",
+    "    image_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # fetch and download data\n",
+    "    with open(data_path / \"pizza_steak_sushi.zip\", \"wb\") as f:\n",
+    "        request = requests.get(\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi.zip\")\n",
+    "        print(\"Downloading data\")\n",
+    "        f.write(request.content)\n",
+    "\n",
+    "    # unzip data\n",
+    "    with zipfile.ZipFile(data_path / \"pizza_steak_sushi.zip\", \"r\") as zip_ref:\n",
+    "        print('Unzipping data...')\n",
+    "        zip_ref.extractall(image_path)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# Download"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "learn_dl_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
